# vtcol

./: .gitignore  Cargo.toml  README.rst  vtcol.rs
doc/: vtcol.rst
misc/etc/: mkinitcpio-vtcol.conf
misc/etc/grub.d/: 42_vtcol
misc/etc/initcpio/hooks/: vtcol
misc/etc/initcpio/install/: vtcol
misc/etc/mkinitcpio.d/: vtcol.preset
schemes/: zebra
src/: vtcol.rs
