###############################################################################
#                                    VTCOL
###############################################################################

[package]
name        = "vtcol"
description = "Set Linux console color scheme"
version     = "0.42.0"
authors     = [ "Philipp Gesang <phg@phi-gamma.net>" ]
repository  = "https://github.com/phi-gamma/vtcol"
keywords    = [ "linux", "virtual terminal", "vt", "tty", "console", "system" ]
readme      = "README.rst"
license     = "GPL-3.0"

[[bin]]
name        = "vtcol"
test        = false
doc         = false

