###############################################################################
#                                    VTCOL
###############################################################################

[package]
name        = "vtcol"
description = "Set Linux console color scheme"
version     = "0.42.1"
authors     = [ "Philipp Gesang <phg@phi-gamma.net>" ]
repository  = "https://github.com/phi-gamma/vtcol"
keywords    = [ "linux", "virtual_terminal", "tty", "console", "system" ]
readme      = "README.rst"
license     = "GPL-3.0"

[[bin]]
name        = "vtcol"
test        = false
doc         = false

[dependencies]
libc = "0.2"
getopts = "0.2"
